--- a/test-output/old/DataDriven Basics/methods-alphabetical.html
+++ b/test-output/old/DataDriven Basics/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>DataDriven Basics</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dc6975">  <td>21/05/30 16:24:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.w2a.testcases.AddCustomerTest@4b34fff9]">addCustomer</td> 
-  <td>main@1828873985</td>   <td></td> </tr>
-<tr bgcolor="ffaf86">  <td>21/05/30 16:24:46</td>   <td>-1603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.loginBankManager()[pri:0, instance:com.w2a.testcases.BankManagerLoginTest@4a00d9cf]">loginBankManager</td> 
-  <td>main@1828873985</td>   <td></td> </tr>
-<tr bgcolor="6e8b97">  <td>21/05/30 16:24:40</td>   <td>-7841</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.w2a.testcases.AddCustomerTest@4b34fff9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1828873985</td>   <td></td> </tr>
-<tr bgcolor="6e8b97">  <td>21/05/30 16:24:49</td>   <td>883</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.w2a.testcases.AddCustomerTest@4b34fff9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1828873985</td>   <td></td> </tr>
+<tr bgcolor="a7f281">  <td>21/05/31 12:42:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest.addCustomer(java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.w2a.testcases.AddCustomerTest@6ca18a14]">addCustomer</td> 
+  <td>main@1928301845</td>   <td></td> </tr>
+<tr bgcolor="74a58c">  <td>21/05/31 12:42:54</td>   <td>-847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BankManagerLoginTest.loginBankManager()[pri:0, instance:com.w2a.testcases.BankManagerLoginTest@1a5b6f42]">loginBankManager</td> 
+  <td>main@1928301845</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>21/05/31 12:42:48</td>   <td>-6754</td> <td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.w2a.testcases.AddCustomerTest@6ca18a14]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1928301845</td>   <td></td> </tr>
+<tr bgcolor="87aa93">  <td>21/05/31 12:42:56</td>   <td>459</td> <td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.w2a.testcases.AddCustomerTest@6ca18a14]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1928301845</td>   <td></td> </tr>
 </table>
