--- a/test-output/index.html
+++ b/test-output/index.html
@@ -168,6 +168,7 @@
   &lt;listeners&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.HTMLReporter&quot;/&gt;
     &lt;listener class-name=&quot;org.uncommons.reportng.JUnitXMLReporter&quot;/&gt;
+    &lt;listener class-name=&quot;com.w2a.listeners.CustomListner&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;BankManager Login Test&quot;&gt;
     &lt;classes&gt;
@@ -223,16 +224,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addCustomer')
 data.setCell(0, 2, 'com.w2a.testcases.AddCustomerTest')
-data.setCell(0, 3, 869);
+data.setCell(0, 3, 439);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginBankManager')
 data.setCell(1, 2, 'com.w2a.testcases.BankManagerLoginTest')
-data.setCell(1, 3, 114);
+data.setCell(1, 3, 70);
 window.suiteTableData['DataDriven_Basics']= { tableData: data, tableDiv: 'times-div-DataDriven_Basics'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 983 ms</span>
+              <span class="suite-total-time">Total running time: 509 ms</span>
               <div id="times-div-DataDriven_Basics">
               </div> <!-- times-div-DataDriven_Basics -->
             </div> <!-- times-div -->
@@ -268,18 +269,18 @@ return data;
               <div class="chronological-class-name">com.w2a.testcases.BankManagerLoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">loginBankManager</span>
-                <span class="method-start">6242 ms</span>
+                <span class="method-start">5912 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.w2a.testcases.AddCustomerTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">addCustomer(Mayur, Mangal, 243005, Customer added successfully)</span>
-                <span class="method-start">7845 ms</span>
+                <span class="method-start">6759 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8728 ms</span>
+                <span class="method-start">7218 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
